part1/log_output/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - name: writer
        image: <your-dockerhub-username>/log-output-writer:1.0
        volumeMounts:
        - name: shared-data
          mountPath: /shared
      - name: reader
        image: <your-dockerhub-username>/log-output-reader:1.0
        volumeMounts:
        - name: shared-data
          mountPath: /shared
        ports:
        - containerPort: 5000
